apps/tandoor-recipes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tandoor-recipes
  namespace: tandoor-recipes
  labels:
    app: tandoor-recipes

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tandoor-recipes
  template:
    metadata:
      labels:
        app: tandoor-recipes
    spec:
      restartPolicy: Always
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
        runAsNonRoot: true
      containers:
        - name: recipes
          image: vabene1111/recipes:2.6.4
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          command:
            - /opt/recipes/venv/bin/gunicorn
            - -b
            - :8080
            - --access-logfile
            - "-"
            - --error-logfile
            - "-"
            - --log-level
            - INFO
            - recipes.wsgi
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
          volumeMounts:
            - mountPath: /opt/recipes/mediafiles
              name: media
              subPath: files
            - mountPath: /opt/recipes/staticfiles
              name: static
              subPath: files
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: recipes-media
        - name: static
          persistentVolumeClaim:
            claimName: recipes-static
        - name: tmp
          emptyDir: {}
