apps/tandoor-recipes/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: tandoor-recipes
  labels:
    app: tandoor-recipes

spec:
  selector:
    app: tandoor-recipes
  ports:
    - port: 8080
      targetPort: 8080
      name: gunicorn
      protocol: TCP
